# notebooks

./: README.md  meson.build
install/data/: com.github.amzamora.notebooks.desktop  com.github.amzamora.notebooks.gschema.xml  css.gresource.xml  custom.css
install/data/editor/: index.html
install/data/editor/src/css/: elements.css  style.css
install/data/editor/src/js/: editor.js  parser.js
install/meson/: post_install.py
install/scripts/: bundle_editor.py
src/: Application.vala  MainWindow.vala
src/services/: Settings.vala
src/widgets/: Editor.vala  Image.vala
